Actualización de educacion por candidato

--- a/HTML-formatos/ArhsiCV.html
+++ b/HTML-formatos/ArhsiCV.html
@@ -242,7 +242,9 @@
                     <fieldset>
                         <div id="myDiv2">
                             <div class="layout container">
-                                <body4></body4>
+                                <div class="grid-layout5">
+                                    <body4></body4>
+                                </div>
                             </div>
                         </div>
                     </fieldset>
@@ -254,8 +256,12 @@
                 <form>
                     <h3 style="text-align:center; color: blue;">EXPERIENCIA LABORAL</h3>
                     <fieldset>
-                        <div id="myDiv">
-                            <body8></body8>
+                        <div class="layout container">
+                            <div class="grid-layout4">
+                                <div id="myDiv">
+                                    <body8></body8>
+                                </div>
+                            </div>
                         </div>
                     </fieldset>
                 </form>
