Mtto a estudios del candidato y cv

--- a/HTML-formatos/ArhsiCV.html
+++ b/HTML-formatos/ArhsiCV.html
@@ -54,11 +54,17 @@
                 <!--   <img src="../img/gustavo_bm.jpg" class="rounded w-100 img-center" alt="No hay foto"> -->
                 <img class="display_image rounded w-100 img-center" src="" id="display_image"
                     style="width:50%; height:50%;">
+
             </div>
         </div>
 
         <div class="caja c2">
             <div>
+                <div>
+                    <!-- <img src="../img/printer.png" class="rounded w-5 img-left" alt=" imprime cv"> -->
+                    <input type="image" src="../img/printer.png" class="rounded w-5 img-left" alt=" imprime cv"
+                        onclick="imprime()">
+                </div>
                 <form>
                     <h3 style="text-align:center; color: blue;">DATOS PERSONALES</h3>
                     <div>
@@ -240,9 +246,9 @@
                 <form>
                     <h3 style="text-align:center; color: blue;">FORMACION COMPLEMENTARIA</h3>
                     <fieldset>
-                        <div id="myDiv2">
-                            <div class="layout container">
-                                <div class="grid-layout5">
+                        <div class="layout container">
+                            <div class="grid-layout5">
+                                <div id="myDiv2">
                                     <body4></body4>
                                 </div>
                             </div>
