--- a/HTML-formatos/ArhsiCV.html
+++ b/HTML-formatos/ArhsiCV.html
@@ -70,92 +70,76 @@
                     <div>
                         <fieldset>
                             <div>
-                                <table style="width:100%;">
+                                <table style="width:100%; height: 100%;">
                                     <tr>
-                                        <td style="width: 120px;"><b>Nombre:</b></td>
-                                        <td style="width: 400px;">
-                                            <p id="nombre"></p>
+                                        <td style="width: 15%;">Nombre:</td>
+                                        <td style="width: 35%;" id="nombre">
                                         </td>
-                                        <td style="width: 120px;"><b>Hijos:</b></td>
-                                        <td>
-                                            <p id="hijos"></p>
+                                        <td style="width: 15%;">Hijos:</td>
+                                        <td style="width: 35%;" id="hijos">
                                         </td>
                                     </tr>
 
                                     <tr>
-                                        <td style="width: 120px;"><b>Edad:</b></td>
-                                        <td style="width: 400px;">
-                                            <p id="edad"></p>
+                                        <td style="width: 15%;">Edad:</td>
+                                        <td style="width: 35%;" id="edad">
                                         </td>
-                                        <td style="width: 120px;"><b>Telefono casa:</b></td>
-                                        <td>
-                                            <p id="tel_casa"></p>
+                                        <td style="width: 15%;">Telefono casa:</td>
+                                        <td style="width: 35%;" id="tel_casa">
                                         </td>
                                     </tr>
 
                                     <tr>
-                                        <td style="width: 120px;"><b>Cumpleaños:</b></td>
-                                        <td style="width: 400px;">
-                                            <p id="cumpleanios"></p>
+                                        <td style="width: 15%;">Cumpleaños:</td>
+                                        <td style="width: 35%;" id="cumpleanios">
                                         </td>
-                                        <td style="width: 120px;"><b>Celular:</b></td>
-                                        <td>
-                                            <p id="celular"></p>
+                                        <td style="width: 15%;">Celular:</td>
+                                        <td style="width: 35%;" id="celular">
                                         </td>
                                     </tr>
 
                                     <tr>
-                                        <td style="width: 120px;"><b>Estado civil:</b></td>
-                                        <td style="width: 400px;">
-                                            <p id="edo_civil"></p>
+                                        <td style="width: 15%;">Estado civil:</td>
+                                        <td style="width: 35%;" id="edo_civil">
                                         </td>
-                                        <td style="width: 120px;"><b>E-mail:</b></td>
-                                        <td style="width: 300px;">
-                                            <p id="correo"></p>
+                                        <td style="width: 15%;">E-mail:</td>
+                                        <td style="width: 35%;" id="correo">
                                         </td>
                                     </tr>
 
                                     <tr>
-                                        <td style="width: 120px;"><b>Nacionalidad:</b></td>
-                                        <td style="width: 400px;">
-                                            <p id="nacionalidad"></p>
+                                        <td style="width: 15%;">Nacionalidad:</td>
+                                        <td style="width: 35%;" id="nacionalidad">
                                         </td>
-                                        <td style="width: 120px;"><b>Skype:</b></td>
-                                        <td style="width: 300px;">
-                                            <p id="skype"></p>
+                                        <td style="width: 15%;">Skype:</td>
+                                        <td style="width: 35%;" id="skype">
                                         </td>
                                     </tr>
 
                                     <tr>
-                                        <td style="width: 120px;"><b>Dirección:</b></td>
-                                        <td style="width: 400px;">
-                                            <p id="direccion" p></p>
+                                        <td style="width: 15%;">Dirección:</td>
+                                        <td style="width: 35%;" id="direccion">
                                         </td>
-                                        <td style="width: 120px;"><b>Sueldo actual:</b></td>
-                                        <td>
-                                            <p id="sdo1"></p>
+                                        <td style="width: 15%;">Sueldo actual:</td>
+                                        <td style="width: 35%;" id="sdo1">
                                         </td>
                                     </tr>
 
                                     <tr>
-                                        <td style="width: 120px;"><b>Colonia:</b></td>
-                                        <td style="width: 400px;">
-                                            <p id="colonia" p></p>
+                                        <td style="width: 15%;">Colonia:</td>
+                                        <td style="width: 35%;" id="colonia">
                                         </td>
-                                        <td style="width: 120px;"><b>Sueldo deseado:</b></td>
-                                        <td>
-                                            <p id="sdo2"></p>
+                                        <td style="width: 15%;">Sueldo deseado:</td>
+                                        <td style="width: 35%;" id="sdo2">
                                         </td>
                                     </tr>
 
                                     <tr>
-                                        <td style="width: 120px;"><b>Delegación:</b></td>
-                                        <td style="width: 400px;">
-                                            <p id="delegacion"></p>
+                                        <td style="width: 15%;">Delegación:</td>
+                                        <td style="width: 35%;" id="delegacion">
                                         </td>
-                                        <td style="width: 120px;"><b>Estado:</b></td>
-                                        <td>
-                                            <p id="estado"></p>
+                                        <td style="width: 15%;">Estado:</td>
+                                        <td style="width: 35%;" id="estado">
                                         </td>
                                     </tr>
                                 </table>
@@ -171,31 +155,31 @@
                     <div class="layout container">
                         <div class="grid-layout2">
                             <div class="caja c31">
-                                <p><b>Profesion:</b></p>
+                                <p>Profesion:</p>
                             </div>
                             <div class="caja c32">
-                                <p id="profesion" style="font-weight: bold;"></p>
+                                <p id="profesion" style="font-weight: normal;"></p>
                             </div>
                             <div class="caja c33">
-                                <p><b>Colegio:</b></p>
+                                <p>Colegio:</p>
                             </div>
                             <div class="caja c34">
                                 <p id="colegio"></p>
                             </div>
                             <div class="caja c35">
-                                <p><b>Campus:</b></p>
+                                <p>Campus:</p>
                             </div>
                             <div class="caja c36">
                                 <p id="campus"></p>
                             </div>
                             <div class="caja c37">
-                                <p><b>Período:</b></p>
+                                <p>Período:</p>
                             </div>
                             <div class="caja c38">
                                 <p id="periodo"></p>
                             </div>
                             <div class="caja c39">
-                                <p><b>Cédula:</b></p>
+                                <p>Cédula:</p>
                             </div>
                             <div class="caja c40">
                                 <p id="cedula"></p>
@@ -205,37 +189,36 @@
 
                         <div class="grid-layout3">
                             <div class="caja c31">
-                                <p><b>Maestria:</b></p>
+                                <p>Maestria:</p>
                             </div>
                             <div class="caja c32">
-                                <p id="maestria" style="font-weight: bold;"></p>
+                                <p id="maestria" style="font-weight: normal;"></p>
                             </div>
                             <div class="caja c33">
-                                <p><b>Colegio:</b></p>
+                                <p>Colegio:</p>
                             </div>
                             <div class="caja c34">
                                 <p id="colegio2"></p>
                             </div>
                             <div class="caja c35">
-                                <p><b>Campus:</b></p>
+                                <p>Campus:</p>
                             </div>
                             <div class="caja c36">
                                 <p id="campus2"></p>
                             </div>
                             <div class="caja c37">
-                                <p><b>Período:</b></p>
+                                <p>Período:</p>
                             </div>
                             <div class="caja c38">
                                 <p id="periodo2"></p>
                             </div>
                             <div class="caja c39">
-                                <p><b>Certificado:</b></p>
+                                <p>Certificado:</p>
                             </div>
                             <div class="caja c40">
                                 <p id="certificado"></p>
                             </div>
                         </div>
-
                     </div>
                 </fieldset>
             </form>
