ajustes cv emision y mtto

--- a/HTML-formatos/ArhsiCV.html
+++ b/HTML-formatos/ArhsiCV.html
@@ -152,73 +152,47 @@
             <form>
                 <h3 style="text-align:center; color: blue;">FORMACION ACADEMICA</h3>
                 <fieldset>
-                    <div class="layout container">
-                        <div class="grid-layout2">
-                            <div class="caja c31">
-                                <p>Profesion:</p>
-                            </div>
-                            <div class="caja c32">
-                                <p id="profesion" style="font-weight: normal;"></p>
-                            </div>
-                            <div class="caja c33">
-                                <p>Colegio:</p>
-                            </div>
-                            <div class="caja c34">
-                                <p id="colegio"></p>
-                            </div>
-                            <div class="caja c35">
-                                <p>Campus:</p>
-                            </div>
-                            <div class="caja c36">
-                                <p id="campus"></p>
-                            </div>
-                            <div class="caja c37">
-                                <p>Período:</p>
-                            </div>
-                            <div class="caja c38">
-                                <p id="periodo"></p>
-                            </div>
-                            <div class="caja c39">
-                                <p>Cédula:</p>
-                            </div>
-                            <div class="caja c40">
-                                <p id="cedula"></p>
-                            </div>
-                            <br>
-                        </div>
-
-                        <div class="grid-layout3">
-                            <div class="caja c31">
-                                <p>Maestria:</p>
-                            </div>
-                            <div class="caja c32">
-                                <p id="maestria" style="font-weight: normal;"></p>
-                            </div>
-                            <div class="caja c33">
-                                <p>Colegio:</p>
-                            </div>
-                            <div class="caja c34">
-                                <p id="colegio2"></p>
-                            </div>
-                            <div class="caja c35">
-                                <p>Campus:</p>
-                            </div>
-                            <div class="caja c36">
-                                <p id="campus2"></p>
-                            </div>
-                            <div class="caja c37">
-                                <p>Período:</p>
-                            </div>
-                            <div class="caja c38">
-                                <p id="periodo2"></p>
-                            </div>
-                            <div class="caja c39">
-                                <p>Certificado:</p>
-                            </div>
-                            <div class="caja c40">
-                                <p id="certificado"></p>
-                            </div>
-                        </div>
+                    <div>
+                        <table style="width:100%; height: 100%; font-weight: normal;">
+                            <tr>
+                                <td style="width: 15%; font-weight: bold;">Profesion:</td>
+                                <td style="width: 55%;" id="profesion">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="width: 15%; font-weight: normal;">Colegio:</td>
+                                <td style="width: 55%;" id="colegio"></td>
+                            </tr>
+                            <tr>
+                                <td style="width: 15%;">Campus:</td>
+                                <td style="width: 55%;" id="campus"></td>
+                            </tr>
+                            <tr>
+                                <td style="width: 15%;">Periodo:</td>
+                                <td style="width: 55%;" id="periodo"></td>
+                                <td style="width: 15%;">Cédula:</td>
+                                <td style="width: 15%;" id="cedula"></td>
+                            </tr>
+                            <tr>
+                                <td style="width: 15%; font-weight: bold;">Maestria:</td>
+                                <td style="width: 55%;" id="maestria">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="width: 15%; font-weight: normal;">Colegio:</td>
+                                <td style="width: 55%;" id="colegio2"></td>
+                            </tr>
+                            <tr>
+                                <td style="width: 15%;">Campus:</td>
+                                <td style="width: 55%;" id="campus2"></td>
+                            </tr>
+                            <tr>
+                                <td style="width: 15%;">Periodo:</td>
+                                <td style="width: 55%;" id="periodo2"></td>
+                                <td style="width: 15%;">Certificado:</td>
+                                <td style="width: 15%;" id="certificado"></td>
+                            </tr>
+                        </table>
                     </div>
                 </fieldset>
             </form>
@@ -232,7 +206,7 @@
                         <div class="layout container">
                             <div class="grid-layout5">
                                 <div id="myDiv2">
-                                    <body4></body4>
+                                    <body10></body10>
                                 </div>
                             </div>
                         </div>
@@ -262,7 +236,7 @@
                     <h3 style="text-align:center; color: blue;">HERRAMIENTAS TECNOLOGICAS QUE MANEJA</h3>
                     <fieldset>
                         <div id="myDiv">
-                            <body9></body9>
+                            <body11></body11>
                         </div>
                     </fieldset>
                 </form>
